--- a/produtos.html
+++ b/produtos.html
@@ -9,12 +9,13 @@
 	<body>
 		<header>
 			<h1><img src="logo.png"></h1>
+			<nav>
 			<ul>
-				<li> a  </li>
-				<li>  b </li>
-				<li>  c </li>
-				<li>   d </li>
-			</ul>		
+				<li><a href="index.html"> home  </a> </li>
+				<li><a href="produto.html"> produtos </a> </li>
+				<li><a href="contato.html"> contato </a> </li>		
+			</ul>
+           </nav>
 		</header>
 	</body>
 </html>
