--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Produtos - Barbearia Alura</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="produtos.css">
 	</head>
 
 	<body>
